--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <!-- <a title="Google Analytics Alternative" href="https://clicky.com/101460271"></a> -->
-<script async data-id="101460271" src="//static.getclicky.com/js"></script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101460271ns.gif" /></p></noscript>
+<!-- <script async data-id="101460271" src="//static.getclicky.com/js"></script> -->
+<!-- <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101460271ns.gif" /></p></noscript> -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
